# BadAppleOS.rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  Xargo.toml  grub.cfg  i386-unknown-none.json  i686-unknown-none.json
src/: begin.asm  lib.rs  link.ld  test.rs
src/ba/: decompressor.rs  mod.rs  stream.rs  video.rs
src/krnl/: cmos.rs  console.rs  descriptor_flush.asm  gdt.rs  idt.rs  irq.rs  irq_handler.asm  isr.rs  isr_handler.asm  keyboard.rs  mod.rs  panic.rs  port.rs  power.rs  sys_time.rs  timer.rs
src/mm/: allocator.rs  init.rs  mod.rs
src/util/: mod.rs  printf.rs  rand.rs
